--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,10 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,500&display=swap');
+
 // Body
-$body-bg: #f8fafc;
+$body-bg: #a8dadc;
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+
+
+h1 {
+    font-family: 'Roboto', sans-serif !important;
+}
 
 // Colors
 $blue: #3490dc;
