--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,13 +15,13 @@
 .container-img {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("/img/childrens.jpg");
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("/img/childrens2.jpg");
     background-position: center;
     background-size: cover;
     color: #fff;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     padding: 0 20px;
 }
 
@@ -29,10 +29,12 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    background-color: #fff;
+    box-shadow: 0 0 1em #1d3557;
 
     section {
         flex: 1;
-        border: 1px solid #ccc;
+        border: 1px solid #888;
         padding: 20px;
         flex-wrap: wrap;
     }
@@ -85,5 +87,47 @@
     padding: 10px 20px;
     border-radius: 20px;
     text-decoration:none; 
+    font-size: 30px;
 }
 
+.container-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 200px;
+}
+
+.navbar-brand {
+    img {
+        height: 50px;
+        width: 62px;
+    }
+}
+
+.container {
+    margin-top: 30px;
+}
+
+.display-4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-submit {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+   
+    input {
+        width: 160px;
+        height: 50px;
+    }
+}
+
+.red-border {
+    border: 2px solid red;
+    border-radius: 4px;
+}
