--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -93,7 +93,7 @@
 .container-text {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     height: 200px;
 }
 
